name:                   mazes
version:                0.1.0.0
homepage:               https://github.com/rcook/mazes#readme
license:                MIT
license-file:           LICENSE
author:                 Richard Cook
maintainer:             rcook@rcook.org
copyright:              2018 Richard Cook
category:               Command Line
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

executable mazes
  default-language:     Haskell2010
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:
      MazesForProgrammers
    , MazesForProgrammers.Ascii
    , MazesForProgrammers.Funcs
    , MazesForProgrammers.Png
    , MazesForProgrammers.Types
  build-depends:
      JuicyPixels
    , JuicyPixels-canvas
    , base >= 4.7 && < 5
    , containers
    , process
    , random
    , temporary
